Corrected nav alignment.

--- a/data/sass/main.scss
+++ b/data/sass/main.scss
@@ -314,7 +314,7 @@ article.event {
         a {
           display: block;
           float: left;
-          margin-right: 10px;
+          margin-left: 10px;
           padding: 5px 10px;
           border: 1px solid #EEE;
 
